Make compatible to Java 8